add bullMQ, docker-compose, heartbeat, api return
